# alfred-evolve

./: .gitignore  README.md  pyproject.toml
src/alfred_evolve/: database.py  evolve.py  island.py  main.py  primitive.py  prompt_template.py  util.py
src/alfred_evolve/database/: base.py  database.py  sql.py
src/alfred_evolve/diff/: generator.py
src/alfred_evolve/eval/: docker.py  evaluator.py
src/alfred_evolve/models/: data_models.py  database_models.py
src/alfred_evolve/pipeline/: build.py  evaluate.py  generate.py  pipeline.py
src/alfred_evolve/prompt/: sampler.py  template.py
src/alfred_evolve/ray/: tasks.py
src/alfred_evolve/utils/: docker.py  gcp.py  llm.py  logging.py  str.py
src/examples/circle_packing/: Dockerfile  eval.py  example_program.py  initial_program.py  scratch.py  vis.py
