[project]
name = "alfred-evolve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-logging>=3.12.1",
    "google-cloud-run>=0.10.18",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pytest>=8.4.0",
    "ray>=2.46.0",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
]
